Fix education layout issue

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -74,10 +74,6 @@
   padding-bottom: 20px;
 }
 
-.education {
-  gap: 0px;
-}
-
 .personal-info {
   display: flex;
   flex-direction: column;
